<?xml version="1.0"?>
<package>
  <name>ez_utils</name>
  <version>0.0.0</version>
  <description>The ez_utils package</description>
  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>
  <license>BSD</license>
  <author email="t.ogura@gmail.com">Takashi Ogura</author>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
